# delivery-backend

./: .gitignore  README.md  asgi.py  conftest.py  pyproject.toml  test.sh
.github/workflows/: benchmark_cached.yml  benchmark_distinct.yml  benchmark_one_by_one.yml  ci.yml
app/: __init__.py  main.py
app/apis/category/v1/: home_category_router.py
app/apis/shop/v1/: shop_router.py
app/dtos/category/: category_response.py  coordinates_request.py
app/dtos/shop/: shop_creation_request.py  shop_creation_response.py
app/entities/caches/category_point/: category_point_cache.py  category_point_cache_invalidator.py
app/entities/category/: categories.py  category_codes.py
app/entities/collections/: __init__.py  base_document.py  geo_json.py
app/entities/collections/category_point/: category_point_collection.py  category_point_document.py
app/entities/collections/shop/: shop_collection.py  shop_document.py
app/entities/redis_repositories/: category_point_redis_repository.py
app/services/: category_service.py  shop_service.py
app/tests/: fixtures.py  test_obvious.py
app/tests/apis/category/v1/: test_home_category_router.py
app/tests/apis/shop/v1/: test_shop_router.py
app/tests/entities/caches/category_point/: test_category_point_cache.py
app/tests/entities/collections/category_point/: test_category_point_collection.py
app/tests/entities/collections/redis_repository/: test_category_point_redis_repository.py
app/tests/services/: test_shop_service.py
app/utils/: mongo.py  redis_.py
assets/: generate_shop_json.py  insert_shops.py  leaflet.html
(+1 files in other folders)
